# Lab2FHIR

./: .env.example  .gitignore  BACKEND_CI_FIXES.md  BACKEND_TEST_FIXES_COMPLETE.md  CI_FIXES_DETAILED.md  CI_FIX_SUMMARY.md  CI_RESOLUTION_SUMMARY.md  DATETIME_SERIALIZATION_FIX.md  DATETIME_UTC_FIX.md  DATETIME_VALIDATION_FIX.md  FRONTEND_OVERVIEW.md  GETTING_STARTED.md  HTTPX_ASYNCCLIENT_FIX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_FIX.md  LINTER_FIX_FINAL.md  PRECOMMIT_CHECKLIST.md  README.md  TEST_FIXES_SUMMARY.md  TIMEZONE_FIX.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: milestones.json
.github/agents/: copilot-instructions.md
.github/copilot/: environment.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  lint.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/src/: config.py  main.py
backend/src/api/: bundles.py  errors.py  parsed_data.py  patients.py  reports.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  pipeline.py  reporting.py
backend/src/domain/: determinism.py  fhir_mapping.py  intermediate_schema.py  report_state_machine.py
backend/src/services/: fhir_bundle_service.py  parser_service.py  pdf_extraction_service.py  report_pipeline_service.py  storage_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: README.md  generate_fixtures.py
backend/tests/integration/: test_us1_happy_path.py
backend/tests/unit/: test_foundation.py
docs/: GETTING_STARTED.md  project-brief.md
docs/planning/: QUICKREF.md  README.md  github-issues.sh  project-board-setup.md  project-breakdown.md  project-overview.md  python-structure.md
examples/: sample_lab_report.txt  usage_example.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx
specs/001-lab-pdf-fhir-converter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/lab2fhir/: __init__.py  cli.py  fhir_client.py  fhir_converter.py  normalizers.py  parser.py  pdf_extractor.py  pipeline.py  schemas.py
tests/: __init__.py  integration_test.py  test_lab2fhir.py  verify_implementation.py
(+16 files in other folders)
